--- a/helpers/extended_vars.yaml
+++ b/helpers/extended_vars.yaml
@@ -1,28 +1,36 @@
 variables:
 - rawname: CS3_GATEWAY
   path: services/idp/pkg/backends/cs3/bootstrap/cs3.go:76
-  foundincode: true
+  foundincode: false
   name: CS3_GATEWAY
   type: ""
   default_value: ""
   description: ""
   do_ignore: true
-- rawname: CS3_MACHINE_AUTH_API_KEY
+- rawname: CS3_GATEWAY
   path: services/idp/pkg/backends/cs3/bootstrap/cs3.go:77
+  foundincode: true
+  name: CS3_GATEWAY
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: false
+- rawname: CS3_MACHINE_AUTH_API_KEY
+  path: services/idp/pkg/backends/cs3/bootstrap/cs3.go:78
   foundincode: true
   name: CS3_MACHINE_AUTH_API_KEY
   type: ""
   default_value: ""
   description: ""
-  do_ignore: true
-- rawname: MICRO_LOG_LEVEL
-  path: ocis-pkg/log/log.go:36
-  foundincode: true
-  name: MICRO_LOG_LEVEL
+  do_ignore: false
+- rawname: CS3_MACHINE_AUTH_API_KEY
+  path: services/idp/pkg/backends/cs3/bootstrap/cs3.go:77
+  foundincode: false
+  name: CS3_MACHINE_AUTH_API_KEY
   type: ""
   default_value: ""
   description: ""
-  do_ignore: false
+  do_ignore: true
 - rawname: MICRO_LOG_LEVEL
   path: ocis-pkg/log/log.go:31
   foundincode: false
@@ -40,6 +48,14 @@ variables:
   default_value: ""
   description: ""
   do_ignore: true
+- rawname: MICRO_LOG_LEVEL
+  path: ocis-pkg/log/log.go:36
+  foundincode: true
+  name: MICRO_LOG_LEVEL
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: false
 - rawname: MICRO_LOG_LEVEL
   path: ocis-pkg/log/log.go:32
   foundincode: true
