--- a/services/_includes/idp-config-example.yaml
+++ b/services/_includes/idp-config-example.yaml
@@ -56,6 +56,7 @@ idp:
   validation_keys_path: ""
   cookiebackenduri: ""
   cookienames: []
+  cookiesamesite: 3
   access_token_duration_seconds: 300
   id_token_duration_seconds: 300
   refresh_token_duration_seconds: 2592000
